 2013-08-06 18:49  dimitr 
   M src/jrd/ext.cpp
Fixed CORE-4168: Backup containing procedures or triggers that select from external tables cannot be restored with ExternalFileAccess=None.

 2013-08-06 09:37  dimitr 
   M src/dsql/AggNodes.cpp
   M src/jrd/Database.cpp
   M src/jrd/Database.h
   M src/jrd/idx.cpp
   M src/jrd/recsrc/SortedStream.cpp
   M src/jrd/sort.cpp
   M src/jrd/sort.h
Front ported CORE-3989: Bad performance / slow response when many concurrent sorts are executed.

 2013-08-06 08:49  paul_reeves 
   M builds/install/arch-specific/win32/FirebirdInstallEnvironmentChecks.inc
Be less specific about version when detecting if a version of firebird is running at installation time.

 2013-08-05 16:11  dimitr 
   M src/jrd/recsrc/SortedStream.cpp
A bit more information for the plan.

 2013-08-05 15:58  dimitr 
   M src/jrd/opt.cpp
Cleanup.

 2013-08-05 14:48  dimitr 
   M src/dsql/parse.y
Simplest solution for CORE-4165: Replace the hierarchical union execution with the plain one.

 2013-08-05 13:08  paul_reeves 
   M builds/install/arch-specific/win32/FirebirdInstall_30.iss
Fix CORE-4153 - write out changes to firebird.conf before starting the server

 2013-08-05 11:59  dimitr 
   M src/isql/isql.epp
   M src/isql/isql.h
Increased the plan buffer size in ISQL to accomodate the detailed plan output.

 2013-08-04 19:39  asfernandes 
   M src/jrd/SysFunction.cpp
Fixed CORE-4156 - RDB$GET_CONTEXT/RDB$SET_CONTEXT parameters incorrectly described as CHAR NOT NULL instead of VARCHAR NULLABLE.

 2013-08-04 15:19  dimitr 
   M lang_helpers/gds_codes.ftn
   M lang_helpers/gds_codes.pas
   M src/include/gen/codetext.h
   M src/include/gen/iberror.h
   M src/include/gen/msgs.h
   M src/include/gen/sql_code.h
   M src/include/gen/sql_state.h
   M src/jrd/ini.epp
   M src/jrd/trig.h
   M src/jrd/vio.cpp
   M src/msgs/facilities2.sql
   M src/msgs/messages2.sql
   M src/msgs/system_errors2.sql